vm/snapshots/variables-array_components-regular-reference_assign-ReferenceAssignOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Reference assignment test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Reference assignment test passed.
----- STDERR -----
