vm/snapshots/variables-defaults-array_element_defaults-ArrayElementDefaultsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Array element defaults test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Array element defaults test passed.
----- STDERR -----
