vm/snapshots/variables-defaults-inherited_field_defaults-InheritedFieldDefaultsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Inherited field defaults test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Inherited field defaults test passed.
----- STDERR -----
