vm/snapshots/variables-defaults-instance_field_defaults-InstanceFieldDefaultsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Instance field defaults test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Instance field defaults test passed.
----- STDERR -----
