vm/snapshots/variables-defaults-multidimensional_array_defaults-MultidimensionalArrayDefaultsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Multidimensional array defaults test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Multidimensional array defaults test passed.
----- STDERR -----
