vm/snapshots/variables-defaults-nested_class_defaults-NestedClassDefaultsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Nested class defaults test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Nested class defaults test passed.
----- STDERR -----
